# kernelbench-tinker-1

./: .env.example  .gitignore  .gitmodules  README.md  justfile  pyproject.toml
docs/: ARCHITECTURE.md
src/kernelbench_tinker/: __init__.py  env.py
src/kernelbench_tinker/assets/: __init__.py
src/kernelbench_tinker/assets/kernelbench_prompts/: __init__.py  prompts.toml
src/kernelbench_tinker/config/: configs.py  rl_kernelbench.yaml  rl_kernelbench_kevin.yaml
src/kernelbench_tinker/envs/: kernelbench_client.py  kernelbench_env.py  multiturn_kernelbench_env.py
src/kernelbench_tinker/evaluation/: eval_kernelbench.py
src/kernelbench_tinker/modal/: app.py  evaluator.py
src/kernelbench_tinker/scripts/: eval_kernel_rl.py  run_and_check.py  train_kernel_rl.py
src/kernelbench_tinker/training/: loop.py  models.py  reward.py  tensorboard_logger.py  trace_logger.py
