[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelbench-tinker"
version = "0.1.0"
description = "KernelBench ↔ Tinker integration for RL kernel training"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [
    {name = "KernelBench Tinker Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "tinker",
    "tinker-cookbook",
    "src",  # KernelBench package name (module import is kernelbench.*)
    "torch>=2.0.0",
    "numpy",
    "pyyaml",
    "datasets",
    "tqdm",
    "chz",
    "python-dotenv",
    # Visualization
    "tensorboard>=2.15.0",
    # Modal Labs for isolated GPU evaluation
    "modal>=0.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[tool.uv.sources]
# tinker-cookbook from git (pinned commit)
tinker-cookbook = { git = "https://github.com/thinking-machines-lab/tinker-cookbook.git", rev = "989f84926245b227634797b8eac46abe232f9c24" }
# KernelBench from git (package name is "src", pinned commit)
src = { git = "https://github.com/ScalingIntelligence/KernelBench.git", rev = "404ee91422cdb78646947faba2cce4c03601bc52" }

[project.scripts]
train-kernel-rl = "kernelbench_tinker.scripts.train_kernel_rl:main"
eval-kernel-rl = "kernelbench_tinker.scripts.eval_kernel_rl:main"
run-and-check-kb = "kernelbench_tinker.scripts.run_and_check:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kernelbench_tinker*"]

[tool.setuptools.package-data]
kernelbench_tinker = ["assets/kernelbench_prompts/**"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
