[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelbench-tinker"
version = "0.1.0"
description = "KernelBench - Tinker integration for RL kernel training"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "KernelBench Tinker Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "tinker",
    "tinker-cookbook",
    "torch>=2.9.0",
    "numpy",
    "pyyaml",
    "datasets",
    "tqdm",
    "chz",
    "python-dotenv",
    "litellm",
    "tomli",
    # Visualization
    "tensorboard>=2.15.0",
    # Modal Labs for isolated GPU evaluation
    # NOTE: Kernel execution uses Python/torch versions defined in modal/app.py,
    # not the versions here. This repo controls training; Modal image controls eval.
    "modal>=0.64.0",
    # KernelBench from local git submodule (managed by git, not uv)
    "kernelbench @ file:///${PROJECT_ROOT}/KernelBench",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[tool.uv.sources]
# tinker-cookbook from git (pinned commit)
tinker-cookbook = { git = "https://github.com/thinking-machines-lab/tinker-cookbook.git", rev = "989f84926245b227634797b8eac46abe232f9c24" }

[project.scripts]
train-kernel-rl = "kernelbench_tinker.scripts.train_kernel_rl:main"
eval-kernel-rl = "kernelbench_tinker.scripts.eval_kernel_rl:main"
run-and-check-kb = "kernelbench_tinker.scripts.run_and_check:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kernelbench_tinker*"]

[tool.setuptools.package-data]
kernelbench_tinker = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
